--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,11 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   loading_indicator: ^3.1.1
-  firebase_auth: ^4.10.0
+  firebase_auth: ^4.16.0
   firebase_core: ^2.16.0
   cached_network_image: ^3.2.3
   flutter_svg: ^2.0.5
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   build_runner: ^2.4.5
@@ -60,3 +61,7 @@ flutter:
     - assets/icons/linkedin.png
     - assets/icons/snapchat.png
     - assets/icons/whatsapp.png
+    - assets/icons/facebook_coloured.png
+    - assets/icons/twitter_coloured.png
+    - assets/icons/google_coloured.png
+
